<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_icon"
        android:title="@string/title_home_page" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/test_icon"
        android:title="@string/title_tests_page" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/profile_icon"
        android:title="@string/title_profile_page" />

</menu>